--- a/appspec.yml
+++ b/appspec.yml
@@ -3,15 +3,15 @@ os: linux
 
 files:
   - source: /
-    destination: /home/ubuntu/app
+    destination: /home/ec2-user/app
 
 hooks:
-  ApplicationStop:
-    - location: scripts/stop.sh
+  BeforeInstall:
+    - location: scripts/cleanup.sh
       timeout: 300
-      runas: root
+      runas: ec2-user
 
-  ApplicationStart:
+  AfterInstall:
     - location: scripts/start.sh
       timeout: 300
-      runas: root
+      runas: ec2-user
